syntax = "proto3";

package BaseballSim.Core;

option csharp_namespace = "BaseballSim.Protos";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";


service GamesGrpc {
  
  rpc GetAllGames(GetAllGamesRequest) returns (MultipleGameDetail) {
    option(google.api.http) = {
      get: "api/v1/games"
    };
  }
  
  rpc GetGamesByTeamId(GetGamesByTeamIdRequest) returns (MultipleGameDetail) {
    option(google.api.http) = {
      get: "api/v1/games/team/{teamId}"
    };
  }
  
  rpc GetGameById(GetGameByIdRequest) returns (GameDetail) {
    option(google.api.http) = {
      get: "api/v1/games/{gameId}"
    };
  }
  
  rpc CreateGame(CreateGameRequest) returns (EmptyGameResponse) {
    option(google.api.http) = {
      post: "api/v1/games",
      body: "*"
    };
  }
  
  rpc UpdateGameById(UpdateGameByIdRequest) returns (EmptyGameResponse) {
    option(google.api.http) = {
      put: "api/v1/games/{gameId}",
      body: "*"
    };
  }
  
  rpc DeleteGame(DeleteGameByIdRequest) returns (EmptyGameResponse) {
    option(google.api.http) = {
      delete: "api/v1/games/{gameId}",
      body: "*"
    };
  }
}

message EmptyGameResponse {}

message GetAllGamesRequest {}

message GetGamesByTeamIdRequest {
  int32 teamId = 1;
}

message GetGameByIdRequest {
  int32 gameId = 1;
}

message CreateGameRequest {
  GameDetail game = 1;
}

message UpdateGameByIdRequest {
  int32 gameId = 1;
}

message DeleteGameByIdRequest {
  int32 gameId = 1;
}

message MultipleGameDetail {
  repeated GameDetail games = 1;
}

message GameDetail {
  int32 gameId = 1;
  google.protobuf.Timestamp gamePlayed = 2;
  int32 homeTeamId = 3;
  int32 awayTeamId = 4;
  string homeTeamName = 5;
  string awayTeamName = 6;
  int32 homeScore = 7;
  int32 awayScore = 8;
  int32 currentInning = 9;
  int32 homeOuts = 10;
  int32 awayOuts = 11;
  bool isCompleted = 12;
}
